RESOLVED FIXED65018
Validation message bubble is incorrectly positioned in a relative body
https://bugs.webkit.org/show_bug.cgi?id=65018
Summary Validation message bubble is incorrectly positioned in a relative body
Attachments
Patch (6.35 KB, patch)
2011-07-22 05:00 PDT, Kent Tamura
no flags
Patch 2 (8.49 KB, patch)
2011-07-22 05:13 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2011-07-22 05:00:13 PDT
Kent Tamura
Comment 2 2011-07-22 05:13:16 PDT
Created attachment 101716 [details] Patch 2 Update Skipped files
WebKit Review Bot
Comment 3 2011-07-22 10:46:28 PDT
Comment on attachment 101716 [details] Patch 2 Clearing flags on attachment: 101716 Committed r91573: <http://trac.webkit.org/changeset/91573>
WebKit Review Bot
Comment 4 2011-07-22 10:46:32 PDT
All reviewed patches have been landed. Closing bug.
Kent Tamura
Comment 5 2011-09-01 18:08:35 PDT
*** Bug 67370 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.