Validation message bubble is incorrectly positioned in a relative body. https://bugs.webkit.org/show_bug.cgi?id=65018

Reviewed by Dimitri Glazkov.

Source/WebCore:

We use position:aboslute for validation message bubbles, and the
origin of the absolute position can be not only the page, but also
an ancestor block with non-static position.

Test: fast/forms/validation-message-in-relative-body.html

* html/ValidationMessage.cpp:
(WebCore::adjustBubblePosition):
Subtract the containing block position from the host position.
(WebCore::ValidationMessage::buildBubbleTree):
Change the order of appendChild() and adjustBubblePosition() in
order to use RenderObject::containingBlock() in
adjustbubbleposition().

LayoutTests:

* fast/forms/validation-message-in-relative-body-expected.txt: Added.
* fast/forms/validation-message-in-relative-body.html: Added.
* platform/gtk/Skipped:
* platform/qt/Skipped:
* platform/win/Skipped:


Canonical link: https://commits.webkit.org/80767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91573 268f45cc-cd09-0410-ab3c-d52691b4dbfc