Source/WebCore/html/ValidationMessage.cpp
@@ -39,6 +39,7 @@
 #include "HTMLDivElement.h"
 #include "HTMLNames.h"
 #include "Page.h"
+#include "RenderBlock.h"
 #include "RenderObject.h"
 #include "Settings.h"
 #include "ShadowRoot.h"
@@ -110,12 +111,19 @@ static void adjustBubblePosition(const IntRect& hostRect, HTMLElement* bubble)
     ASSERT(bubble);
     if (hostRect.isEmpty())
         return;
-    bubble->getInlineStyleDecl()->setProperty(CSSPropertyTop, static_cast<double>(hostRect.y() + hostRect.height()), CSSPrimitiveValue::CSS_PX);
+    double hostX = hostRect.x();
+    double hostY = hostRect.y();
+    if (RenderBox* container = bubble->renderer()->containingBlock()) {
+        FloatPoint containerLocation = container->localToAbsolute();
+        hostX -= containerLocation.x() + container->borderLeft() + container->paddingLeft();
+        hostY -= containerLocation.y() + container->borderTop() + container->paddingTop();
+    }
+    bubble->getInlineStyleDecl()->setProperty(CSSPropertyTop, hostY + hostRect.height(), CSSPrimitiveValue::CSS_PX);
     // The 'left' value of ::-webkit-validation-bubble-arrow.
     const int bubbleArrowTopOffset = 32;
-    double bubbleX = hostRect.x();
+    double bubbleX = hostX;
     if (hostRect.width() / 2 < bubbleArrowTopOffset)
-        bubbleX = max(hostRect.x() + hostRect.width() / 2 - bubbleArrowTopOffset, 0);
+        bubbleX = max(hostX + hostRect.width() / 2 - bubbleArrowTopOffset, 0.0);
     bubble->getInlineStyleDecl()->setProperty(CSSPropertyLeft, bubbleX, CSSPrimitiveValue::CSS_PX);
 }
 
@@ -130,9 +138,9 @@ void ValidationMessage::buildBubbleTree(Timer<ValidationMessage>*)
     // Need to force position:absolute because RenderMenuList doesn't assume it
     // contains non-absolute or non-fixed renderers as children.
     m_bubble->getInlineStyleDecl()->setProperty(CSSPropertyPosition, CSSValueAbsolute);
-    adjustBubblePosition(host->getRect(), m_bubble.get());
     host->ensureShadowRoot()->appendChild(m_bubble.get(), ec);
     ASSERT(!ec);
+    adjustBubblePosition(host->getRect(), m_bubble.get());
 
     RefPtr<HTMLDivElement> clipper = HTMLDivElement::create(doc);
     clipper->setShadowPseudoId("-webkit-validation-bubble-arrow-clipper", ec);
